--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
-
 buildscript {
     ext.cubaVersion = '6.8.1'
     repositories {
-        
+
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
             credentials {
@@ -10,7 +9,7 @@ buildscript {
                 password(rootProject.hasProperty('repoPass') ? rootProject['repoPass'] : 'cuba123')
             }
         }
-        
+
     }
     dependencies {
         classpath "com.haulmont.gradle:cuba-plugin:$cubaVersion"
@@ -36,7 +35,7 @@ cuba {
     }
     tomcat {
         dir = "$project.rootDir/deploy/tomcat"
-        
+
     }
 }
 
@@ -52,6 +51,7 @@ configure([globalModule, coreModule, guiModule, webModule]) {
     apply(plugin: 'maven')
     apply(plugin: 'idea')
     apply(plugin: 'cuba')
+    apply(plugin: 'jacoco')
 
     dependencies {
         testCompile('junit:junit:4.12')
@@ -65,12 +65,19 @@ configure([globalModule, coreModule, guiModule, webModule]) {
     artifacts {
         archives sourceJar
     }
+
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+            html.enabled true
+        }
+    }
 }
 
 configure(globalModule) {
     task enhance(type: CubaEnhancing)
 
-    
+
 }
 
 configure(coreModule) {
@@ -157,7 +164,7 @@ configure(webModule) {
         compile(guiModule)
 
     }
-    
+
     task webArchive(type: Zip) {
         from file("$buildDir/web")
         from file('web')
@@ -220,5 +227,6 @@ task restart(dependsOn: ['stop', ':app-core:deploy', ':app-web:deploy'], descrip
 task wrapper(type: Wrapper) {
     gradleVersion = '4.3.1'
 }
+
 
 apply from: 'extra.gradle'
