--- a/build.gradle
+++ b/build.gradle
@@ -68,8 +68,9 @@ configure([globalModule, coreModule, guiModule, webModule]) {
 
     jacocoTestReport {
         reports {
-            xml.enabled true
             html.enabled true
+            xml.enabled true
+            csv.enabled false
         }
     }
 }
